# my-bill

./: .env  .env.development.local  .env.local  .gitignore  .nextignore  auth.ts  index.html  mongo.js  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
dispose/: dm.html  dmm.html  index.html
dispose/form/: create-form.tsx
prisma/: schema.prisma
prisma/migrations/0_init/: migration.sql
scripts/: aptos.js
src/: api.ts
src/app/: globals.css  layout.tsx  page.css  page.tsx
src/app/(admin)/: layout.tsx
src/app/(admin)/dashboard/: layout.tsx  nav.tsx  navbar.tsx  page.tsx  pageTW.tsx  table.tsx
src/app/(admin)/playground/: chart.tsx  page.tsx
src/app/(home)/: layout.tsx  page.tsx
src/app/(home)/form/: page.tsx
src/app/(home)/login/: page.tsx
src/app/(home)/postgre/: page.tsx
src/app/(home)/signup/: page.tsx
src/app/api/: add-pet.ts  db.js  route.js  route.ts
src/app/components/: header.css  table.tsx
src/app/components/form/: actions.tsx
src/app/components/landing/: nav.tsx  navbar.tsx
src/app/components/ui/: button.tsx  panel.tsx
src/app/create/: page.tsx
src/app/form/: error.tsx  page.tsx
src/app/inputs/create/: page.tsx
src/app/login/: page.tsx  pagedf.tsx
src/app/postgre/: index.mjs  page.tsx
src/app/scripts/: aptos.js  seed.js
src/app/trem/: page.jsx
src/components/: header.tsx  table.tsx
src/components/landing/: navbar.tsx
src/components/ui/: button.tsx  navigation-menu.tsx
src/context/: auth-context.tsx
src/lib/: actions.ts  data.ts
