[tool.poetry]
name = "my-bill"
version = "0.1.0"
description = ""
authors = ["Domengo <dominicsengo@gmail.com>"]
readme = "README.md"
packages = [{include = "my_bill"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
